--- a/index.html
+++ b/index.html
@@ -439,27 +439,27 @@
                 font-size: 20px;
             }
             /*-------------------*/
-            .why-choose-us{
+            .our-key-benefits{
                 padding: 80px 0;
             }
-            .why-choose-us-container{
+            .our-key-benefits-container{
                 max-width: 1310px;
                 width: 100%;
                 padding: 0 16px;
                 margin: 0 auto;
             }
-            .why-choose-us-title{
+            .our-key-benefits-title{
                 margin-bottom: 50px;
                 font-size: 36px;
                 font-weight: 600;
                 text-align: center;
             }
-            .why-choose-us-main{
+            .our-key-benefits-main{
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
             }
-            .why-choose-us-wrapper{
+            .our-key-benefits-wrapper{
                 width: 95%;
                 margin: auto;
                 padding: 40px;
@@ -471,13 +471,13 @@
                 transition: all 0.5s ease;
                 display: flex;
             }
-            .why-choose-accordion-item{
+            .our-key-benefits-accordion-item{
                 display: flex;
                 flex-direction: row;
                 gap: 20px;
                 align-items: center;
             }
-            .why-choose-us-text{
+            .our-key-benefits-text{
                 font-weight: 600;
             }
             .image-hover{
@@ -497,7 +497,7 @@
                 background-size: cover;
                 background-position: center center;
             }
-            .why-choose-us-left{
+            .our-key-benefits-left{
                 display: flex;
                 align-items: center;
                 width: 60px;
@@ -511,8 +511,8 @@
                 font-size: 24px;
                 font-weight: 600;
             }
-            .why-choose-us-wrapper:hover .image-hover, 
-            .why-choose-us-wrapper:hover .why-choose-accordion-item{
+            .our-key-benefits-wrapper:hover .image-hover, 
+            .our-key-benefits-wrapper:hover .our-key-benefits-accordion-item{
                 visibility: visible;
                 opacity: 0.9;
                 z-index: 1;
@@ -1224,29 +1224,29 @@
             </div>
         </div>
         </section>
-        <section class="why-choose-us">
-            <div class="why-choose-us-container">
-                <h2 class="why-choose-us-title">Кілька причин, чому ви звернули увагу на наш сайт:</h2>
-                <div class="why-choose-us-main">
-                    <div class="why-choose-us-wrapper">
+        <section class="our-key-benefits">
+            <div class="our-key-benefits-container">
+                <h2 class="our-key-benefits-title">Кілька причин, чому ви звернули увагу на наш сайт:</h2>
+                <div class="our-key-benefits-main">
+                    <div class="our-key-benefits-wrapper">
                         <div class="background-image image-hover" style="background-image: url(images/bg/1_bg.jpg);"></div>
-                        <div class="why-choose-accordion-item">
-                            <div class="why-choose-us-left">01</div>
-                            <div class="why-choose-us-text">Ви розглядаєте можливість придбання ваших послуг</div>
+                        <div class="our-key-benefits-accordion-item">
+                            <div class="our-key-benefits-left">01</div>
+                            <div class="our-key-benefits-text">Ви розглядаєте можливість придбання ваших послуг</div>
                         </div>
                     </div>
-                    <div class="why-choose-us-wrapper">
+                    <div class="our-key-benefits-wrapper">
                         <div class="background-image image-hover" style="background-image: url(images/bg/1_bg.jpg);"></div>
-                        <div class="why-choose-accordion-item">
-                            <div class="why-choose-us-left">02</div>
-                            <div class="why-choose-us-text">Вам важливо отримати максимальну ефективність від вкладених коштів, щоб кожна витрачена копійка приносила максимальну користь</div>
+                        <div class="our-key-benefits-accordion-item">
+                            <div class="our-key-benefits-left">02</div>
+                            <div class="our-key-benefits-text">Вам важливо отримати максимальну ефективність від вкладених коштів, щоб кожна витрачена копійка приносила максимальну користь</div>
                         </div>
                     </div>
-                    <div class="why-choose-us-wrapper">
+                    <div class="our-key-benefits-wrapper">
                         <div class="background-image image-hover" style="background-image: url(images/bg/1_bg.jpg);"></div>
-                        <div class="why-choose-accordion-item">
-                            <div class="why-choose-us-left">03</div>
-                            <div class="why-choose-us-text">Вам потрібні топ-менеджери і швидка комунікація</div>
+                        <div class="our-key-benefits-accordion-item">
+                            <div class="our-key-benefits-left">03</div>
+                            <div class="our-key-benefits-text">Вам потрібні топ-менеджери і швидка комунікація</div>
                         </div>
                     </div>
                    
