--- a/index.html
+++ b/index.html
@@ -595,10 +595,11 @@
             .our-mission-pic{
                 border-radius: 0px;
                 overflow: hidden;
-                width: max-content;
-                max-width: 100%;
+                /* width: max-content; */
+                width: 100%;
                 position: relative;
                 z-index: 1;
+                object-fit: cover;
             }
             .our-mission-pic img{
                 border-radius: 0;
@@ -1293,8 +1294,9 @@
         <section class="inside-our-company">
             <div class="inside-our-company-container">
                 <h2 class="inside-our-company-title">Наша команда</h2>
-                <div class="inside-our-company-shell">
-                    <div class="inside-our-company-team">
+                <div class="inside-our-company-box">
+                    <div class="inside-our-company-shell">
+                        <div class="inside-our-company-team">
                         <div class="inside-our-company-team-pic">
                             <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
@@ -1304,8 +1306,8 @@
                                 <p>Менеджер з розвитку бізнесу</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="inside-our-company-team">
+                        </div>
+                        <div class="inside-our-company-team">
                         <div class="inside-our-company-team-pic">
                             <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
@@ -1315,10 +1317,12 @@
                                 <p>Менеджер зі зв'язків з інвесторами</p>
                             </div>
                         </div>
+                        </div>
                     </div>
                 </div>
-                <div class="inside-our-company-shell">
-                    <div class="inside-our-company-team">
+                <div class="inside-our-company-box">
+                    <div class="inside-our-company-shell">
+                        <div class="inside-our-company-team">
                         <div class="inside-our-company-team-pic">
                             <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
@@ -1328,8 +1332,8 @@
                                 <p>Заступник директора</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="inside-our-company-team">
+                        </div>
+                        <div class="inside-our-company-team">
                         <div class="inside-our-company-team-pic">
                             <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
@@ -1338,6 +1342,7 @@
                             <div class="team-information">
                                 <p>Начальник відділу закупівель</p>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
