--- a/index.html
+++ b/index.html
@@ -589,8 +589,14 @@
             .our-mission-content-images1{
                 display: flex;
                 flex-direction: column;
-                position: relative;
-                width: 40%;
+                gap: 20px;
+                /* position: relative;
+                width: 40%; */
+            }
+            .our-mission-content-list{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
             }
             .our-mission-pic{
                 border-radius: 0px;
@@ -600,6 +606,11 @@
                 position: relative;
                 z-index: 1;
                 object-fit: cover;
+            }
+            .our-mission-pic:hover{
+                outline: 5px solid #063150;
+                outline-offset: 10px;
+                transition: 0.3s;
             }
             .our-mission-pic img{
                 border-radius: 0;
@@ -611,7 +622,7 @@
                 transition: all 2s ease;
                 transform: scale(1);
             }
-            .our-mission-pic::before{
+            /* .our-mission-pic::before{
                 top: 0;
                 right: 51%;
                 bottom: 0;
@@ -641,22 +652,23 @@
                 right: 35px;
                 z-index: 0;
                 margin: -62px 0 0 auto;
-            }
+            } */
             .our-mission-box{
                 background-color: #34ADE1;
-                position: absolute;
+                /* position: absolute;
                 right: 10px;
-                top: 20px;
+                top: 20px; */
                 padding: 35px 20px;
                 border-radius: 10px;
-                z-index: 1;
+                height: 150px;
+                width: 30%;
             }
-            .our-mission-box:last-child{
+            /* .our-mission-box:last-child{
                 top: auto;
                 right: auto;
                 left: 20px;
                 bottom: 20px;
-            }
+            } */
             .our-mission-box-title{
                 color: #fdfbfb;
                 margin: 0;
@@ -707,7 +719,7 @@
             .inside-our-company-team-pic{
                 position: relative;
                 z-index: 2;
-                width: 200px;
+                width: 50%;
             }
             .inside-our-company-team-pic img{
                 width: 100%;
@@ -733,6 +745,7 @@
                 /* padding: 0 0 0 10px; */
                 padding: 25px 30px 30px 0;
                 text-align: center;
+                width: 50%;
            }
            .inside-our-company-team-info{
                 /* position: relative;
@@ -1270,6 +1283,26 @@
                             Ми надаємо комплексні рішення для галузі, включаючи автоматизацію процесів, системи моніторингу та управління, а також продукти для підвищення ефективності виробництва. Наша мета – підтримувати та розвивати галузь, надаючи інноваційні та надійні продукти. CompanyName орієнтований на підвищення продуктивності та полегшення повсякденного життя.</p>
                     </div>
                     <div class="our-mission-content-images1">
+                        <div class="our-mission-content-list">
+                            <div class="our-mission-pic">
+                                <img src="images/gallery/6-gallery.jpg" alt="picture">
+                            </div> 
+                            <div class="our-mission-box">
+                                <h4 class="our-mission-box-title">Lorem</h4>
+                                <p class="box-text">Lorem lorem</p>
+                            </div>
+                        </div>
+                        <div class="our-mission-content-list">
+                            <div class="our-mission-box">
+                                <h4 class="our-mission-box-title">Lorem</h4>
+                                <p class="box-text">Lorem lorem</p>
+                            </div>
+                            <div class="our-mission-pic">
+                                <img src="images/gallery/9-gallery.jpg" alt="picture">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="our-mission-content-images1">
                         <div class="our-mission-pic">
                             <img src="images/gallery/6-gallery.jpg" alt="picture">
                         </div>
@@ -1286,7 +1319,7 @@
                             <h4 class="our-mission-box-title">Lorem</h4>
                             <p class="box-text">Lorem lorem</p>
                         </div>
-                    </div>
+                    </div> -->
                     
                 </div>
             </div>
