--- a/index.html
+++ b/index.html
@@ -867,7 +867,72 @@
             .positive-feedback-raiting svg{
                 fill: yellow;
                 width: 20px;
-               
+            }
+            .bottom-contact-box{
+                background-color: #010F30;
+                padding: 60px;
+                border-radius: 10px;
+                margin-bottom: -130px;
+                display: flex;
+                flex-direction: row;
+                gap: 15px;
+                width: 100%;
+            }
+            .bottom-contact-list{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                width: 35%;
+                border: 1px solid #ECF5FB;
+                padding: 15px;
+                border-radius: 6px;
+            }
+            .bottom-contact-list-items{
+                display: flex;
+                gap: 10px;
+                gap: 10px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+            .bottom-icon{
+                width: 60px;
+                height: 60px;
+                background-color: #fff;
+                border-radius: 50%;
+                text-align: center;
+                margin-right: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            
+            }
+            .bottom-icon svg{
+                width: 40px;
+                height: 40px;
+            }
+            .bottom-contact-content{
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                gap: 10px;
+            }
+            .bottom-contact-content p{
+                color: #fff;
+                font-size: 14px;
+            }
+            .bottom-contact-content a{
+                text-decoration: none;
+                color: #fff;
+                font-size: 14px;
+            }
+            .bottom-text{
+                color: #fff;
+                font-size: 16px;
+                display: flex;
+                flex-direction: column;
             }
             /*--------------------*/
             .have-any-questions {
@@ -1452,6 +1517,43 @@
                         <textarea name="message" id="message" placeholder="Ваше повідомлення"></textarea>
                         <button class="button-contact-form">Надішліть повідомлення</button>
                     </form>
+                </div>
+            </div>
+            <div class="have-any-questions-container">
+                <div class="bottom-contact-box">
+                    <div class="bottom-contact-list">
+                        <div class="bottom-contact-list-items">
+                            <div class="bottom-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#010F30" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s-8-4.5-8-11.8A8 8 0 0 1 12 2a8 8 0 0 1 8 8.2c0 7.3-8 11.8-8 11.8z"/><circle cx="12" cy="10" r="3"/></svg>
+                            </div>
+                            <div class="bottom-contact-content">
+                            <div class="bottom-text"> ТОВ «СЕЛМ», Код ЕГРПОУ 14187491</div>
+                            <p>проспект Героїв Сталінграда, 53б, Київ, Україна, 04210</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="bottom-contact-list">
+                        <div class="bottom-contact-list-items">
+                            <div class="bottom-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#010F30" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+                            </div>
+                            <div class="bottom-contact-content">
+                            <div class="bottom-text">Контактний телефон</div>
+                            <a href="">+380 99 560 1399</a>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="bottom-contact-list">
+                        <div class="bottom-contact-list-items">
+                            <div class="bottom-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#010F30" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                            </div>
+                            <div class="bottom-contact-content">
+                            <div class="bottom-text">Поштова адреса</div>
+                            <a href="">sales@outlook.com</a>
+                        </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
