--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
             .the-dream-team-item:hover .the-dream-picture-name-sec{
                 color: #f9f5f5;
             }
+            .the-dream-team-item:hover .the-dream-team-picture img{
+                transition: all 0.3s ease-in-out;
+                transform: scale(1.1) rotate(0deg);
+            }
             .the-dream-team-picture{
                 width: 100%;
                 height: auto;
@@ -196,6 +200,7 @@
                 height: 150px;
                 border-radius: 50%;
                 object-fit: contain;
+                transition: all 0.3s ease-in-out;
             }
             .the-dream-picture-name{
                 font-size: 24px;
