--- a/index.html
+++ b/index.html
@@ -271,21 +271,21 @@
                     </div>
                     <div class="the-dream-team-item">
                         <div class="the-dream-team-picture">
-                            <img src="images/avatar/m-3.jpg" alt="avatar">
+                            <img src="images/avatar/w-3.jpg" alt="avatar">
                         </div>
                         <div class="the-dream-picture-name">Дарина Лебедева</div>
                         <span class="the-dream-picture-name-sec">Менеджер зі зв'язків з інвесторами</span>
                     </div>
                     <div class="the-dream-team-item">
                         <div class="the-dream-team-picture">
-                            <img src="images/avatar/m-3.jpg" alt="avatar">
+                            <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
                         <div class="the-dream-picture-name">Павел Пахомов</div>
                         <span class="the-dream-picture-name-sec">Заступник директора</span>
                     </div>
                     <div class="the-dream-team-item">
                         <div class="the-dream-team-picture">
-                            <img src="images/avatar/m-3.jpg" alt="avatar">
+                            <img src="images/avatar/m-0.jpg" alt="avatar">
                         </div>
                         <div class="the-dream-picture-name">Варвара Мельникова</div>
                         <span class="the-dream-picture-name-sec">Начальник відділу закупівель</span>
