--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
                 margin-bottom: 23px;
                 transition: all 0.3s ease-in-out;
             }
+            /*---------------*/
+            .user-evaluations{
+                padding: 80px 0;
+            }
         </style>
     </head>
     <body>
@@ -292,6 +296,9 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="user-evaluations">
+
         </section>
     </body>
 </html>
