--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 font-weight: 600;
                 text-align: center;
                 position: relative;
+                color: #f0103b;;
             }
             .the-dream-team-title::before{
                 content: "";
