--- a/index.html
+++ b/index.html
@@ -299,7 +299,9 @@
             </div>
         </section>
         <section class="user-evaluations">
-
+            <div class="user-evaluations-container">
+                <h2 class="user-evaluations-title">Коменты</h2>
+            </div>
         </section>
     </body>
 </html>
