--- a/index.html
+++ b/index.html
@@ -317,6 +317,23 @@
                 height: 50px;
                 fill: #ef0f3a;
             }
+            /*--------------*/
+            .from-our-desk {
+                padding: 80px 0;
+            }
+            .from-our-desk-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .from-our-desk-title { 
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+                color: #ef0f3a;
+            }
         </style>
     </head>
     <body>
@@ -430,6 +447,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="from-our-desk">
+            <div class="from-our-desk-container">
+                <h2 class="from-our-desk-title">Наші статті</h2>
             </div>
         </section>
     </body>
