--- a/index.html
+++ b/index.html
@@ -333,6 +333,25 @@
                 font-weight: 600;
                 text-align: center;
                 color: #ef0f3a;
+                position: relative;
+            }
+            .from-our-desk-title::before{
+                background-color: #0246dd;
+                content: "";
+                width: 60px;
+                height: 2px;
+                position: absolute;
+                top: 20px;
+                left: 450px;
+            }
+            .from-our-desk-title::after{
+                background-color: #0246dd;
+                content: "";
+                width: 60px;
+                height: 2px;
+                position: absolute;
+                top: 20px;
+                right: 450px;
             }
         </style>
     </head>
