--- a/index.html
+++ b/index.html
@@ -353,6 +353,58 @@
                 top: 20px;
                 right: 450px;
             }
+            .from-our-desk-list{
+                display: flex;
+                flex-direction: row;
+                gap: 15px;
+                width: 100%;
+                align-items: center;
+                justify-content: center;
+            }
+            .from-our-desk-items{
+                display: flex;
+                flex-direction: column;
+                width: 30%;
+            }
+            .from-our-desk-blog-image{
+                position: relative;
+                z-index: 1;
+                overflow: hidden;
+                width: 100%;
+            }
+            .from-our-desk-blog-image img{
+                height: 300px;
+                width: 100%;
+                object-fit: cover;
+                transform: scale(1) rotate(0deg);
+                transition: all 0.6s ease-in-out;
+            }
+            .from-our-desk-blog-image::before{
+                bottom: 0;
+                opacity: 0.35;
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 0%;
+                background-color: #01133c;
+                right: 0;
+                left: 0;
+                transition: all 0.6s ease-in-out;
+                z-index: 1;
+            }
+            .from-our-desk-blog-image::after{
+                top: 0;
+                opacity: 0.35;
+                position: absolute;
+                content: "";
+                width: 100%;
+                height: 0%;
+                background-color: #01133c;
+                right: 0;
+                left: 0;
+                transition: all 0.6s ease-in-out;
+                z-index: 1;
+            }
         </style>
     </head>
     <body>
@@ -471,6 +523,13 @@
         <section class="from-our-desk">
             <div class="from-our-desk-container">
                 <h2 class="from-our-desk-title">Наші статті</h2>
+                <div class="from-our-desk-list">
+                    <div class="from-our-desk-items">
+                        <div class="from-our-desk-blog-image">
+                            <img src="images/gallery/9-gallery.jpg" alt="blog">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </body>
