--- a/index.html
+++ b/index.html
@@ -405,6 +405,91 @@
                 transition: all 0.6s ease-in-out;
                 z-index: 1;
             }
+            .from-our-desk-blog-content{
+                position: absolute;
+                bottom: 20px;
+                right: 0;
+                left: 20px;
+                display: inline-flex;
+                flex-wrap: wrap;
+                align-items: end;
+                justify-content: start;
+                z-index: 2;
+                overflow: hidden;
+            }
+            .blog-date{
+                height: 82px;
+                width: 79px;
+                display: inline-flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+                background: #0146df;
+                font-size: 30px;
+                font-weight: 700;
+                color: #fff;
+                line-height: 1.2;
+                padding: 10px 11px;
+                transition: all 0.3s ease-in-out;
+                position: relative;
+            }
+            .blog-date::before{
+                position: absolute;
+                content: "";
+                width: 79px;
+                min-height: 4px;
+                background-color: #f00f3a;
+                left: 0px;
+                transition: all 0.3s ease-in-out;
+                bottom: 0;
+            }
+            .blog-date span{
+                font-size: 14px;
+            }
+            .from-our-desk-blog-description{
+                margin-bottom: 0;
+                display: flex;
+                flex-direction: row;
+                background-color: #fff;
+                height: 40px;
+                align-items: center;
+                gap: 20px;
+                padding: 0 20px;
+                position: relative;
+            }
+            .from-our-desk-blog-description::before{
+                position: absolute;
+                content: "";
+                width: 0px;
+                height: 4px;
+                background-color: #0347dd;
+                left: 0px;
+                transition: all 0.3s ease-in-out;
+                bottom: 0;
+            }
+            /* .description-name::after{
+                content: "";
+                width: 1px;
+                height: 30px;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                background-color: #e1e8f9;
+                right: 0;
+            } */
+             .description-name,
+             .description-com{
+                display: flex;
+                align-items: center;
+                gap: 5px;
+                font-size: 14px;
+             }
+            .description-name svg,
+            .description-com svg{
+                width: 30px;
+                height: 30px;
+            }
         </style>
     </head>
     <body>
@@ -527,6 +612,20 @@
                     <div class="from-our-desk-items">
                         <div class="from-our-desk-blog-image">
                             <img src="images/gallery/9-gallery.jpg" alt="blog">
+                            <div class="from-our-desk-blog-content">
+                                <span class="blog-date">30
+                                    <span>Aug, 2024</span>
+                                </span>
+                                <div class="from-our-desk-blog-description">
+                                    <div class="description-name">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5.52 19c.64-2.2 1.84-3 3.22-3h6.52c1.38 0 2.58.8 3.22 3"/><circle cx="12" cy="10" r="3"/><circle cx="12" cy="12" r="10"/></svg>
+                                        Name
+                                    </div>
+                                    <div class="description-com">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
+                                        2 Comments</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
