--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             .from-our-desk-blog-description::before{
                 position: absolute;
                 content: "";
-                width: 0px;
+                width: 245px;
                 height: 4px;
                 background-color: #0347dd;
                 left: 0px;
@@ -490,6 +490,11 @@
                 width: 30px;
                 height: 30px;
             }
+            .from-our-desk-items:hover .from-our-desk-blog-description{
+                color: #ec0e38;
+                transition: all 0.3s ease-in-out;
+            }
+           
         </style>
     </head>
     <body>
@@ -624,6 +629,9 @@
                                     <div class="description-com">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
                                         2 Comments</div>
+                                </div>
+                                <div class="from-our-desk-book">
+                                    
                                 </div>
                             </div>
                         </div>
