--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 transform: scale(1) rotate(0deg);
                 transition: all 0.6s ease-in-out;
             }
-            .from-our-desk-blog-image::before{
+            /* .from-our-desk-blog-image::before{
                 bottom: 0;
                 opacity: 0.35;
                 position: absolute;
@@ -404,7 +404,7 @@
                 left: 0;
                 transition: all 0.6s ease-in-out;
                 z-index: 1;
-            }
+            } */
             .from-our-desk-blog-content{
                 position: absolute;
                 bottom: 20px;
@@ -494,7 +494,34 @@
                 color: #ec0e38;
                 transition: all 0.3s ease-in-out;
             }
-           
+           .from-our-desk-book{
+            padding: 20px;
+           }
+           .from-our-desk-subtitle{
+                text-align: center;
+                font-size: 18px;
+           }
+           .from-our-desk-text{
+                font-size: 16px;
+                text-align: justify;
+                margin-bottom: 10px;
+           }
+           .desk-btn{
+                transition: all ease 0.4s;
+                text-transform: capitalize;
+                text-align: center;
+                color: #fff;
+                font-size: 16px;
+                font-weight: 700;
+                padding: 17px 30px;
+                background-color: #0349e6;
+                display: block;
+                clip-path: polygon(140% 0, 100% 70%, 95% 100%, 0 100%, 0 0);
+           }
+           .from-our-desk-items:hover .desk-btn{
+                background-color: #f4123d;
+                transition: all ease 0.5s;
+           }
         </style>
     </head>
     <body>
@@ -630,10 +657,14 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
                                         2 Comments</div>
                                 </div>
-                                <div class="from-our-desk-book">
-                                    
-                                </div>
                             </div>
+                        </div>
+                        <div class="from-our-desk-book">
+                            <a href="">
+                                <h3 class="from-our-desk-subtitle">Создание интернет портала</h3>
+                            </a>
+                            <p class="from-our-desk-text">Интернет-портал — web-сайт, содержащий разнообразные интерактивные сервисы (поиск, почта, новости, форумы, обслуживание, голосование и др.), функционирующие в рамках... </p>
+                            <a href="" class="desk-btn"> Читати Далі</a>
                         </div>
                     </div>
                 </div>
