--- a/index.html
+++ b/index.html
@@ -623,6 +623,42 @@
                 font-weight: 700;
                 clip-path: polygon(140% 0, 100% 65%, 95% 100%, 0 100%, 0 0);
         }
+            .our-approach-to-work{
+                padding: 80px 0;
+            }
+            .our-approach-to-work-container{
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .our-approach-to-work-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+                color: #ef0f3a;
+                position: relative;
+            }
+            .our-approach-to-work-title::before{
+                background-color: #0246dd;
+                content: "";
+                width: 60px;
+                height: 2px;
+                position: absolute;
+                top: 20px;
+                left: 400px;
+            }
+            .our-approach-to-work-title::after{
+                background-color: #0246dd;
+                content: "";
+                width: 60px;
+                height: 2px;
+                position: absolute;
+                top: 20px;
+                right: 400px;
+            }
+            
         </style>
     </head>
     <body>
@@ -914,6 +950,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="our-approach-to-work">
+            <div class="our-approach-to-work-container">
+                <h2 class="our-approach-to-work-title">Наші переваги</h2>
             </div>
         </section>
     </body>
