--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,33 @@
                             <p>Ми активно розвиваємося і розширюємо наші пропозиції, віддаючи пріоритет динамічному розвитку</p>
                         </div>
                     </div>
+                    <div class="our-approach-to-work-box">
+                        <div class="our-approach-to-work-box-icon">
+                            <img src="images/icon/5.svg" alt="preference">
+                            <span class="box-icon-number">02</span>
+                        </div>
+                        <div class="our-approach-to-work-content">
+                            <p>Принципи порядності, оперативності та прозорості – головні риси нашого способу роботи</p>
+                        </div>
+                    </div>
+                    <div class="our-approach-to-work-box">
+                        <div class="our-approach-to-work-box-icon">
+                            <img src="images/icon/4.svg" alt="preference">
+                            <span class="box-icon-number">03</span>
+                        </div>
+                        <div class="our-approach-to-work-content">
+                            <p>Лояльність відіграє важливу роль у наших відносинах з нашими клієнтами, і ми завжди прагнемо її підтримувати</p>
+                        </div>
+                    </div>
+                    <div class="our-approach-to-work-box">
+                        <div class="our-approach-to-work-box-icon">
+                            <img src="images/icon/2.svg" alt="preference">
+                            <span class="box-icon-number">04</span>
+                        </div>
+                        <div class="our-approach-to-work-content">
+                            <p>Ми з гордістю обслуговуємо галузь з 2012 року</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
