--- a/index.html
+++ b/index.html
@@ -92,6 +92,25 @@
                 gap: 20px;
                 color: #fff;
             }
+            .menu-top-right-contact{
+                display: flex;
+                flex-direction: row;
+                gap: 15px;
+                align-items: center;
+            }
+            .contact-picture{
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 55px;
+                width: 55px;
+                background: #fff;
+            }
+            .contact-picture svg{
+                width: 30px;
+                height: 30px;
+            }
            .showcase-your-strengths{
                 background-image: url(images/bg/3_bg.jpg);
                 background-repeat: no-repeat;
@@ -851,7 +870,18 @@
                         </nav>
                     </div>
                     <div class="menu-top-right">
-
+                        <div class="menu-top-right-contact">
+                            <div class="contact-picture">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+                            </div>
+                            <a href="">+380 99 560 1399</a>
+                        </div>
+                        <div class="menu-top-right-contact">
+                            <div class="contact-picture">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
+                            </div>
+                            <a href="">+380 99 560 1399</a>
+                        </div>
                     </div>
                 </div>
             </div>
