--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
                             <div class="contact-picture">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="#0347dd" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             </div>
-                            <a href="">+380 99 560 1399</a>
+                            <a href="">sales@outlook.com</a>
                         </div>
                     </div>
                 </div>
