--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
                 width: 30px;
                 height: 30px;
             }
+            .menu-top-background{
+                padding-bottom: 80px;
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
            .showcase-your-strengths{
                 background-image: url(images/bg/3_bg.jpg);
                 background-repeat: no-repeat;
@@ -884,6 +890,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="menu-top-background">
+                <img src="images/bg/3_bg.jpg" alt="">
             </div>
         </header>
 	    <section class="showcase-your-strengths">
